# jsonrpc-cpp_tests

./: CMakeLists.txt  README.md  client.cpp  server.cpp  spec.json
cmake/: FindJSONCPP.cmake  FindJSONRPCCPP.cmake
